# rusty-kaspa

./: Cargo.toml  README.md
bridgeflutter/: Cargo.toml
bridgeflutter/src/: frb_generated.rs
bridgeflutter/src/api/: simple.rs
flutter_project/: pubspec.yaml
flutter_project/flutter_project/: flutter_rust_bridge.yaml
flutter_project/flutter_project/rust_builder/android/: build.gradle
flutter_project/flutter_project/rust_builder/linux/: CMakeLists.txt
flutter_project/flutter_project/rust_builder/windows/: CMakeLists.txt
flutter_project/integration_test/: simple_test.dart
flutter_project/lib/: main.dart
flutter_project/lib/src/rust/: frb_generated.dart
flutter_project/linux/flutter/: generated_plugins.cmake
flutter_project/rust_builder/: pubspec.yaml
flutter_project/rust_builder/android/: settings.gradle
flutter_project/rust_builder/android/src/main/: AndroidManifest.xml
flutter_project/rust_builder/ios/: rust_lib_flutter_project.podspec
flutter_project/rust_builder/macos/: rust_lib_flutter_project.podspec
flutter_project/windows/flutter/: generated_plugins.cmake
