[package]
name = "rust_lib_flutter_project"
version = "0.1.0"
edition = "2021"
rust-version.workspace = true
# version.workspace = true
# edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
include = [
    "src/**/*.rs",
    "src/**/*.txt",
    "src/**/*.css",
    "Cargo.toml",
    "Cargo.lock",
]

[lib]
crate-type = ["cdylib", "staticlib"]



# [features]
# default = []

# [lib]
# name = "kaspa_cli_lib"
# crate-type = ["cdylib", "lib"]

[dependencies]
flutter_rust_bridge = "=2.0.0-dev.33"

# [dependencies]
async-trait.workspace = true
# borsh.workspace = true
# cfg-if.workspace = true
# convert_case.workspace = true
# dashmap.workspace = true
# downcast.workspace = true
# faster-hex.workspace = true
# futures.workspace = true
# js-sys.workspace = true
kaspa-addresses.workspace = true
kaspa-bip32.workspace = true
kaspa-consensus-core.workspace = true
kaspa-core.workspace = true
kaspa-daemon.workspace = true
kaspa-metrics-core.workspace = true
kaspa-rpc-core.workspace = true
kaspa-utils.workspace = true
kaspa-wallet-core.workspace = true
kaspa-wallet-keys.workspace = true
kaspa-wrpc-client.workspace = true
strum = "0.26.2"
futures.workspace = true
anyhow = "1.0.85"
tokio = { workspace = true, features = ["macros", "rt"] }
# nw-sys.workspace = true
# pad.workspace = true
# regex.workspace = true
# separator.workspace = true
# serde_json.workspace = true
# serde.workspace = true
# textwrap.workspace = true
# thiserror.workspace = true
# wasm-bindgen.workspace = true
# workflow-core.workspace = true
# workflow-dom.workspace = true
# workflow-log.workspace = true
# workflow-node.workspace = true
# workflow-nw.workspace = true
# workflow-store.workspace = true
# workflow-terminal.workspace = true
# workflow-wasm.workspace = true

# [dependencies.web-sys]
# workspace = true
# features = [
#     'console',
#     'Document',
#     'Window',
#     'Node',
#     'Element',
#     'HtmlElement',
#     'DomTokenList',
#     # 'HtmlElement',
#     # 'CustomEvent',
#     # 'MouseEvent'
# ]

# [target.'cfg(not(target_arch = "wasm32"))'.dependencies]
# tokio.workspace = true

# [lints.clippy]
# empty_docs = "allow"
